provider-aws/examples-generated/storagegateway/gateway.yaml
apiVersion: storagegateway.aws.upbound.io/v1alpha1
kind: Gateway
metadata:
  name: example
spec:
  forProvider:
    gatewayIpAddress: 1.2.3.4
    gatewayName: example
    gatewayTimezone: GMT
    gatewayType: FILE_FSX_SMB
    smbActiveDirectorySettings:
    - domainName: corp.example.com
      passwordSecretRef:
        key: example-key
        name: example-secret
        namespace: crossplane-system
      username: Admin
  providerConfigRef:
    name: example
